--- a/monitoring/prometheus-stack-values.yaml
+++ b/monitoring/prometheus-stack-values.yaml
@@ -13,3 +13,11 @@ grafana:
     url: http://loki-distributed-gateway.monitoring.svc.cluster.local
     version: 1
   
+additionalPrometheusRulesMap: 
+  custom-rules:
+    groups:
+      - name: custom_rules
+        rules:
+          - record: nginx_ingress_request_success_rate
+            expr: sum(rate(nginx_ingress_controller_requests{ingress=~"kind-prometheus-grafana",status!~"[4-5].*"}[2m])) by (ingress) / sum(rate(nginx_ingress_controller_requests{ingress=~"kind-prometheus-grafana"}[2m])) by (ingress) * 100
+        
